<resources>
    <string name="app_name">Calculator</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="btpoint">.</string>
    <string name="btEqual">=</string>
    <string name="btDiv">/</string>
    <string name="btPercent">%</string>
    <string name="btMinus">-</string>
    <string name="btPlus">+</string>
    <string name="btClear">C</string>
    <string name="btMulti">*</string>
    <string name="btSpl">÷</string>

</resources>
