<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EE020101"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"

    android:paddingBottom="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:textIsSelectable="true" />
    </LinearLayout>

    <EditText
        android:id="@+id/numberField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#673AB7"
        android:importantForAutofill="no"
        android:inputType="phone"
        tools:targetApi="o" />

    <LinearLayout
        android:id="@+id/line_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numberField"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/c"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btClear" />

        <Button
            android:id="@+id/btDiv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btDiv" />

        <Button
            android:id="@+id/%"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btPercent" />

        <Button
            android:id="@+id/btSpl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#C9FF5722"
            android:text="@string/btSpl"
            tools:ignore="HardcodedText" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/line_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_1"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/BtnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_7" />

        <Button
            android:id="@+id/BtnEight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_8" />

        <Button
            android:id="@+id/BtnNine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_9" />

        <Button
            android:id="@+id/btMulti"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#C9FF5722"
            android:text="@string/btMulti" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_2">

        <Button
            android:id="@+id/BtnFour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_4" />

        <Button
            android:id="@+id/BtnFive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_5" />

        <Button
            android:id="@+id/BtnSix"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_6" />

        <Button
            android:id="@+id/-"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#C9FF5722"
            android:text="@string/btMinus" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_3">

        <Button
            android:id="@+id/BtnOne"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_1" />

        <Button
            android:id="@+id/BtnTwo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_2" />

        <Button
            android:id="@+id/BtnThree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_3" />

        <Button
            android:id="@+id/+"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#C9FF5722"
            android:text="@string/btPlus" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_4">

        <Button
            android:id="@+id/BtnZero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/_0" />

        <Button
            android:id="@+id/."
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btpoint" />

        <Button
            android:id="@+id/equally"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#C9FF5722"
            android:text="@string/btEqual" />
    </LinearLayout>
</RelativeLayout>